Fixed spacing on donate page

--- a/src/styles/donate/_affiliate.scss
+++ b/src/styles/donate/_affiliate.scss
@@ -1,4 +1,5 @@
 .affiliate {
+    margin-top: 4rem;
     img {
         height: 2.5rem;
         width: auto;
