--- a/src/styles/donate/_zelle.scss
+++ b/src/styles/donate/_zelle.scss
@@ -1,4 +1,5 @@
 .zelle {
+    margin-top: 4rem;
     h4 {
         margin-bottom: 0.5rem;
     }
